SUBDIRS = src data help po gnome pixmaps dicfiles

EXTRA_DIST = README TODO ChangeLog COPYING rpm/gjiten.spec scripts/make_debs scripts/make_release\
	     intltool-extract.in intltool-merge.in intltool-update.in

MAINTAINERCLEANFILES += configure config.sub config.guess aclocal.m4 compile depcomp install-sh intltool-extract \
		intltool-extract.in intltool-merge intltool-merge.in intltool-update intltool-update.in \
		ltmain.sh missing mkinstalldirs config.h.in po/*stamp* *stamp*

